--- a/package.json
+++ b/package.json
@@ -7,8 +7,14 @@
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "clean-webpack-plugin": "^0.1.19",
+    "html-webpack-plugin": "^3.2.0",
+    "webpack-dev-server": "^3.1.9"
+  },
   "scripts": {
+    "watch": "webpack --watch",
+    "start": "webpack-dev-server --open",
     "build": "webpack --config webpack.config.js"
   },
   "author": "",
