--- a/package.json
+++ b/package.json
@@ -4,17 +4,27 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.1.2",
+    "@babel/preset-env": "^7.1.0",
+    "autoprefixer": "^9.1.5",
+    "babel-loader": "^8.0.4",
     "clean-webpack-plugin": "^0.1.19",
+    "css-hot-loader": "^1.4.2",
+    "css-loader": "^1.0.0",
+    "cssnano": "^4.1.4",
+    "cssnano-preset-advanced": "^4.0.2",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.4.3",
+    "postcss-loader": "^3.0.0",
+    "webpack": "^4.20.2",
     "webpack-dev-server": "^3.1.9"
   },
   "scripts": {
     "watch": "webpack --watch",
-    "start": "webpack-dev-server --open",
+    "start": "webpack-dev-server --config webpack.config.js --open",
     "build": "webpack --config webpack.config.js"
   },
   "author": "",
