--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "scripts": {
     "watch": "webpack --watch",
     "start": "webpack-dev-server --config webpack.config.js --open",
-    "build": "webpack --config webpack.config.js"
+    "build": "webpack --config webpack.config.js --mode=development",
+    "production": "webpack --config webpack.config.js --mode=production"
   },
   "author": "",
   "license": "ISC"
