--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "normalize.css": "^8.0.0",
     "webpack-cli": "^3.1.2"
   },
   "devDependencies": {
@@ -23,7 +24,7 @@
     "webpack-dev-server": "^3.1.9"
   },
   "scripts": {
-    "watch": "webpack --watch",
+    "watch": "webpack --watch --mode=development",
     "start": "webpack-dev-server --config webpack.config.js --open",
     "build": "webpack --config webpack.config.js --mode=development",
     "production": "webpack --config webpack.config.js --mode=production"
