--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "css-loader": "^1.0.0",
     "cssnano": "^4.1.4",
     "cssnano-preset-advanced": "^4.0.2",
+    "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.3",
     "postcss-loader": "^3.0.0",
