--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
   "scripts": {
     "watch": "webpack --watch --mode=development",
     "start": "webpack-dev-server --config webpack.config.js --open",
-    "build": "webpack --config webpack.config.js --mode=development",
-    "production": "webpack --config webpack.config.js --mode=production"
+    "dev": "webpack --config webpack.config.js --mode=development",
+    "prod": "webpack --config webpack.config.js --mode=production"
   },
   "author": "",
   "license": "ISC"
