--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "fullcalendar": "^4.0.0-alpha.2",
     "normalize.css": "^8.0.0",
     "webpack-cli": "^3.1.2"
   },
